--- a/try.html
+++ b/try.html
@@ -9,10 +9,11 @@
 
     <style>
         .contanier {
-            display: flex;
-            flex-direction: row;
+            /* display: flex; */
+            /* flex-direction: row; */
             border: 1px solid black;
-            justify-content: space-between;
+            justify-content: center;
+            height: 400px;
         }
 
         .cont {
@@ -27,7 +28,7 @@
 
 <body>
     <div class="contanier">
-        <div class="cont">
+        <!-- <div class="cont">
             <p>ajbakjbaigfkabhabkbahc</p>
             <p>ajbakjbaigfkabhabkbahc</p>
             <p>ajbakjbaigfkabhabkbahc</p>
@@ -36,9 +37,16 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi modi doloremque molestiae sunt vitae
                 odio repellendus, saepe atque perspiciatis nobis cum architecto? Suscipit enim quibusdam nesciunt quia,
                 rem culpa odit?</p>
-        </div>
-        <div class="cont">syesgsdyrtysd</div>
+        </div> -->
+        <!-- <div class="cont">syesgsdyrtysd</div> -->
+
+        <input type="number" id="num1">
+        <input type="number" id="num2">
+        <p class="result" style="border: 1px solid black; width: 100px; height: 50px;"></p>
+        <button id="sum">Sum</button>
+        <button id="Subtract">Subtract</button>
     </div>
+    <script src="try.js"></script>
 </body>
 
 </html>
